fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,19 @@
 
 html {
   font-size: 10px;
+  overflow-x: hidden;
 }
 
 body {
   font-family: "Plus Jakarta Sans", sans-serif;
-  background: linear-gradient(to bottom right, #fff, rgba(102, 108, 163, 0.15));
+  background: linear-gradient(to bottom right, #fff, rgba(102, 108, 163, 0.05));
   width: 100vw;
   overflow-x: hidden;
+}
+
+.wrapper {
+  overflow-x: hidden;
+  width: 100vw;
 }
 
 .hero .text {
@@ -44,7 +50,8 @@ nav {
   padding: 2rem;
 }
 
-.logo {
+.logo-1,
+.logo-2 {
   height: 3.5rem;
   width: 8.9rem;
 }
@@ -65,6 +72,7 @@ h1 {
 }
 
 h2 {
+  margin-top: 5rem;
   font-size: 2.4rem;
   line-height: 2.8rem;
   color: #fff;
@@ -163,6 +171,7 @@ a:hover {
 
 .grid-colored {
   width: 100%;
+  height: 20rem;
   background: linear-gradient(to bottom, #F02AA6, #FF6F48);
   place-self: center;
   border-radius: 11px;
@@ -238,7 +247,8 @@ a:hover {
 
 @media (min-width: 1100px) {
 
-  .logo {
+  .logo-1,
+  .logo-2 {
     width: 11.1rem;
     height: 2.8rem;
   }
